# robert

./: .bazelrc  .gitignore  .yarnrc.yml  BUILD  README.md  WORKSPACE  justfile  package.json  tsconfig.json  user-env.sh
actions/: README.md
deliverables/discord-manager/: BUILD  config.ts  index.ts
deliverables/example-command/: BUILD  config.ts  index.ts  manifest.ts
deliverables/mc-to-gdrive/: BUILD  config.ts  gDrive.ts  index.ts  manifest.ts  rcon.ts
hack/: BUILD  constants.ts  gen-manifests.sh  jkcfg.bzl  process-workspace.ts
hack/config/: tsconfig.json
kube/: BUILD.bazel  DOCKERFILE  package.json  spec.yaml  tsconfig.json
kube/manifests/: BUILD.bazel  command.ts  discord-manager-boiler.ts  discord-manager.js  discord-manager.ts  ping-config.yaml  tsconfig.json
kube/manifests/base-dev/: BUILD  discord-token.yaml  ghcr-config.yaml  namespace.yaml  sa.yaml
tools/bzl/: BUILD.bazel  index.bzl  platforms.bzl  tools.bzl
