package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//hack:jkcfg.bzl", "gen_manifests")

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "manifests",
    srcs = glob(["manifests/*.ts"]),
    deps = [
        "@npm//@dpu/jkcfg-k8s",
        "@npm//@dpu/tekton",
        "@npm//@jkcfg/kubernetes",
        "@npm//@jkcfg/std",
        "@npm//@types/node",
    ],
    runtime = "node",
    # force ts_library to always produce ES6 compatible outputs because
    # this code will always be consumed by `jk`
    devmode_module = "es2015",
    devmode_target = "es2017",
    prodmode_module = "es2015",
    prodmode_target = "es2017",
    tsconfig = "//kube:tsconfig.json",
)

nodejs_binary(
    name = "bin",
    entry_point = ":discord-manager.ts",
    data = [
        ":manifests"
    ],
)

gen_manifests(
    pkg_name="test",
    dep=":bin",
    gen_file="kube/manifests/discord-manager.js"
)